--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -2,7 +2,7 @@
 <div class="form-group" style="margin-top:150px;">
     <form class="small-box" (ngSubmit)="getDate()">
         <div class="form-group">
-            <input placeholder="Select date range" type="text" name="daterange" ngxDaterangepickerMd class="form-control" autocomplete="off" [(ngModel)]="selected" [locale]="{applyLabel: 'ok', format: 'DD-MM-YYYY'}" [dateLimit]="7" />
+            <input placeholder="Select date range" type="text" name="daterange" ngxDaterangepickerMd class="form-control" autocomplete="off" [(ngModel)]="selected" [locale]="{applyLabel: 'ok', format: 'YYYY-MM-DD'}" [dateLimit]="7" />
         </div>
         <div class="form-group">
             <select name="fileType" class="form-control" required (change)="getFileType($event)">
@@ -23,6 +23,4 @@
             </button>
         </div>
     </form>
-</div> 
-
-
+</div>
